<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~    Copyright 2020-2021 Rabbit author and contributors.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->


<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.fightingguys.kaiheila</groupId>
    <artifactId>rabbit</artifactId>
    <version>0.0.2</version>
    <name>rabbit</name>
    <url>https://fightingguys.cn</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <developers>
        <developer>
            <name>Hu Yikai</name>
            <email>running_hyk@hotmail.com</email>
            <url>https://fightingguys.cn</url>
        </developer>

        <developer>
            <name>Kamiku</name>
            <email>kamiku@kamikuz.cn</email>
            <url>https://kamikuz.cn</url>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.9.3</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.10</version>
        </dependency>
    </dependencies>

    <organization>
        <name>PixMeow Studio</name>
        <url>https://pixmeow.com/</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/Kamikuz/rabbit</url>
        <connection>scm:git:git://github.com/Kamikuz/rabbit.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/Kamikuz/rabbit.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>FightingGuys Rabbit Packages(Kamikuz Refactor Version)</name>
            <url>https://maven.pkg.github.com/Kamikuz/rabbit</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <additionalJOption>--no-module-directories</additionalJOption>
                    <reportOutputDirectory>jdocs</reportOutputDirectory>
                    <destDir>.</destDir>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>